add notebook test file type, misc tweaks